# SemanticReader

./: .gitignore  CMakeLists.txt  README.md
data/: 000000.yaml  000022.yaml
include/: semantic_reader.hpp
src/: read_semantic.cpp
test/: test_function.cpp
